--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?74837235');
-  src: url('../font/fontello.eot?74837235#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?74837235') format('woff2'),
-       url('../font/fontello.woff?74837235') format('woff'),
-       url('../font/fontello.ttf?74837235') format('truetype'),
-       url('../font/fontello.svg?74837235#fontello') format('svg');
+  src: url('../font/fontello.eot?13089451');
+  src: url('../font/fontello.eot?13089451#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?13089451') format('woff2'),
+       url('../font/fontello.woff?13089451') format('woff'),
+       url('../font/fontello.ttf?13089451') format('truetype'),
+       url('../font/fontello.svg?13089451#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?74837235#fontello') format('svg');
+    src: url('../font/fontello.svg?13089451#fontello') format('svg');
   }
 }
 */
@@ -56,6 +56,7 @@
 }
  
 .icon-guidedog:before { content: '\e800'; } /* '' */
+.icon-heart:before { content: '\e801'; } /* '' */
 .icon-menu:before { content: '\f0c9'; } /* '' */
 .icon-instagram:before { content: '\f16d'; } /* '' */
 .icon-twitter-squared:before { content: '\f304'; } /* '' */
